--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -392,6 +392,7 @@
   "message.beemancer.storage_terminal.not_linked": "Not linked to any controller",
   "message.beemancer.storage_terminal.auto_linked": "Terminal linked to controller!",
   "message.beemancer.storage_terminal.linked_manually": "Terminal linked to controller!",
+  "message.beemancer.storage_terminal.unlinked": "Terminal unlinked from controller!",
   "gui.beemancer.storage_terminal.search": "Search...",
   "gui.beemancer.storage_terminal.request": "Request Items",
   "gui.beemancer.storage_terminal.pending_title": "Pending Requests",
@@ -414,6 +415,7 @@
   "message.beemancer.network_interface.not_linked": "Not linked to any controller",
   "message.beemancer.network_interface.linked": "Linked to controller at (%d, %d, %d)",
   "message.beemancer.network_interface.linked_manually": "Interface linked to controller!",
+  "message.beemancer.network_interface.unlinked": "Interface unlinked from controller!",
   "container.beemancer.import_interface": "Import Interface",
   "container.beemancer.export_interface": "Export Interface",
   "block.beemancer.honeyed_stone": "Honeyed Stone",
