--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -391,6 +391,7 @@
   "message.beemancer.storage_terminal.not_linked": "Non lié à un contrôleur",
   "message.beemancer.storage_terminal.auto_linked": "Terminal lié au contrôleur !",
   "message.beemancer.storage_terminal.linked_manually": "Terminal lié au contrôleur !",
+  "message.beemancer.storage_terminal.unlinked": "Terminal délié du contrôleur !",
   "gui.beemancer.storage_terminal.search": "Rechercher...",
   "gui.beemancer.storage_terminal.request": "Demander des Items",
   "gui.beemancer.storage_terminal.pending_title": "Requêtes en attente",
@@ -413,6 +414,7 @@
   "message.beemancer.network_interface.not_linked": "Non lié à un contrôleur",
   "message.beemancer.network_interface.linked": "Lié au contrôleur en (%d, %d, %d)",
   "message.beemancer.network_interface.linked_manually": "Interface liée au contrôleur !",
+  "message.beemancer.network_interface.unlinked": "Interface déliée du contrôleur !",
   "container.beemancer.import_interface": "Interface d'Import",
   "container.beemancer.export_interface": "Interface d'Export",
   "block.beemancer.honeyed_stone": "Pierre Miellée",
