--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -409,6 +409,16 @@
   "gui.beemancer.tasks.requests": "Requests",
   "gui.beemancer.tasks.automation": "Automation",
   "gui.beemancer.tasks.empty": "No tasks",
+  "gui.beemancer.tasks.blocked.honey_depleted": "No honey",
+  "gui.beemancer.tasks.blocked.no_bee_slot": "Max bees active",
+  "gui.beemancer.tasks.blocked.dependency_pending": "Waiting for dependency",
+  "gui.beemancer.tasks.blocked.items_unavailable": "Items not available",
+  "gui.beemancer.tasks.blocked.no_space": "No storage space",
+  "gui.beemancer.tasks.blocked.target_missing": "Target missing",
+  "gui.beemancer.tasks.state.flying": "Flying",
+  "gui.beemancer.tasks.state.queued": "Queued",
+  "gui.beemancer.tasks.state.completed": "Done",
+  "gui.beemancer.tasks.state.failed": "Failed",
   "gui.beemancer.terminal.essences": "Essences",
   "block.beemancer.import_interface": "Import Interface",
   "block.beemancer.export_interface": "Export Interface",
