--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -408,6 +408,16 @@
   "gui.beemancer.tasks.requests": "Requêtes",
   "gui.beemancer.tasks.automation": "Automatisation",
   "gui.beemancer.tasks.empty": "Aucune tâche",
+  "gui.beemancer.tasks.blocked.honey_depleted": "Plus de miel",
+  "gui.beemancer.tasks.blocked.no_bee_slot": "Abeilles max actives",
+  "gui.beemancer.tasks.blocked.dependency_pending": "Attente de dependance",
+  "gui.beemancer.tasks.blocked.items_unavailable": "Items indisponibles",
+  "gui.beemancer.tasks.blocked.no_space": "Pas d'espace",
+  "gui.beemancer.tasks.blocked.target_missing": "Cible introuvable",
+  "gui.beemancer.tasks.state.flying": "En vol",
+  "gui.beemancer.tasks.state.queued": "En attente",
+  "gui.beemancer.tasks.state.completed": "Terminé",
+  "gui.beemancer.tasks.state.failed": "Échoué",
   "gui.beemancer.terminal.essences": "Essences",
   "block.beemancer.import_interface": "Interface d'Import",
   "block.beemancer.export_interface": "Interface d'Export",
