--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -214,9 +214,10 @@
   "gui.beemancer.bee_creator.edit": "Edit",
   "gui.beemancer.magic_hive.breeding_mode": "Breeding Mode Active",
   "screen.beemancer.codex": "Beemancer Codex",
-  "codex.beemancer.page.bees": "Bee Tree",
-  "codex.beemancer.page.bee": "Bees",
+  "codex.beemancer.page.apica": "Apica",
+  "codex.beemancer.page.bees": "Bees",
   "codex.beemancer.page.alchemy": "Alchemy",
+  "codex.beemancer.page.artifacts": "Artifacts",
   "codex.beemancer.page.logistics": "Logistics",
   "codex.beemancer.locked": "???",
   "codex.beemancer.click_to_unlock": "Click to unlock",
