--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -201,7 +201,7 @@
   "tooltip.beemancer.climate.temperate": "Tempéré",
   "tooltip.beemancer.climate.warm": "Chaud",
   "tooltip.beemancer.climate.hot": "Brûlant",
-  "tooltip.beemancer.drop": "Drop",
+  "tooltip.beemancer.drop": "Production",
   "tooltip.beemancer.flyspeed": "Vitesse",
   "tooltip.beemancer.foraging": "Butinage",
   "tooltip.beemancer.tolerance": "Tolérance",
@@ -498,10 +498,10 @@
   "message.beemancer.essence_extractor.formed": "L'Extracteur d'Essence a été formé !",
   "message.beemancer.essence_extractor.already_formed": "L'Extracteur d'Essence est déjà actif",
   "message.beemancer.essence_extractor.invalid_structure": "Structure invalide - vérifiez le pattern de l'extracteur",
-  "item.beemancer.lesser_drop_essence": "Essence de Drop Mineure",
-  "item.beemancer.drop_essence": "Essence de Drop",
-  "item.beemancer.greater_drop_essence": "Essence de Drop Supérieure",
-  "item.beemancer.perfect_drop_essence": "Essence de Drop Parfaite",
+  "item.beemancer.lesser_drop_essence": "Essence de Production Mineure",
+  "item.beemancer.drop_essence": "Essence de Production",
+  "item.beemancer.greater_drop_essence": "Essence de Production Supérieure",
+  "item.beemancer.perfect_drop_essence": "Essence de Production Parfaite",
   "item.beemancer.lesser_speed_essence": "Essence de Vitesse Mineure",
   "item.beemancer.speed_essence": "Essence de Vitesse",
   "item.beemancer.greater_speed_essence": "Essence de Vitesse Supérieure",
@@ -517,7 +517,7 @@
   "item.beemancer.diurnal_essence": "Essence Diurne",
   "item.beemancer.nocturnal_essence": "Essence Nocturne",
   "item.beemancer.insomnia_essence": "Essence d'Insomnie",
-  "item.beemancer.essence.type.drop": "Niveau de Drop",
+  "item.beemancer.essence.type.drop": "Niveau de Production",
   "item.beemancer.essence.type.speed": "Vitesse de Vol",
   "item.beemancer.essence.type.foraging": "Durée de Butinage",
   "item.beemancer.essence.type.tolerance": "Tolérance",
