--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -201,7 +201,7 @@
   "tooltip.beemancer.climate.temperate": "Temperate",
   "tooltip.beemancer.climate.warm": "Warm",
   "tooltip.beemancer.climate.hot": "Hot",
-  "tooltip.beemancer.drop": "Drop",
+  "tooltip.beemancer.drop": "Production",
   "tooltip.beemancer.flyspeed": "Fly Speed",
   "tooltip.beemancer.foraging": "Foraging",
   "tooltip.beemancer.tolerance": "Tolerance",
@@ -503,10 +503,10 @@
   "message.beemancer.essence_extractor.formed": "The Essence Extractor has been formed!",
   "message.beemancer.essence_extractor.already_formed": "The Essence Extractor is already active",
   "message.beemancer.essence_extractor.invalid_structure": "Invalid structure - check the extractor pattern",
-  "item.beemancer.lesser_drop_essence": "Lesser Drop Essence",
-  "item.beemancer.drop_essence": "Drop Essence",
-  "item.beemancer.greater_drop_essence": "Greater Drop Essence",
-  "item.beemancer.perfect_drop_essence": "Perfect Drop Essence",
+  "item.beemancer.lesser_drop_essence": "Lesser Production Essence",
+  "item.beemancer.drop_essence": "Production Essence",
+  "item.beemancer.greater_drop_essence": "Greater Production Essence",
+  "item.beemancer.perfect_drop_essence": "Perfect Production Essence",
   "item.beemancer.lesser_speed_essence": "Lesser Speed Essence",
   "item.beemancer.speed_essence": "Speed Essence",
   "item.beemancer.greater_speed_essence": "Greater Speed Essence",
@@ -522,7 +522,7 @@
   "item.beemancer.diurnal_essence": "Diurnal Essence",
   "item.beemancer.nocturnal_essence": "Nocturnal Essence",
   "item.beemancer.insomnia_essence": "Insomnia Essence",
-  "item.beemancer.essence.type.drop": "Drop Level",
+  "item.beemancer.essence.type.drop": "Production Level",
   "item.beemancer.essence.type.speed": "Flight Speed",
   "item.beemancer.essence.type.foraging": "Foraging Duration",
   "item.beemancer.essence.type.tolerance": "Tolerance",
