mise a jour architecture texture

--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -34,7 +34,8 @@
   "item.beemancer.honey_bucket": "Honey Bucket",
   "item.beemancer.royal_jelly_bucket": "Royal Jelly Bucket",
   "item.beemancer.nectar_bucket": "Nectar Bucket",
-  "item.beemancer.honeyed_wood": "Honeyed Wood",
+  "block.beemancer.honeyed_wood": "Honeyed Wood",
+  "block.beemancer.stripped_honeyed_wood": "Stripped Honeyed Wood",
   "item.beemancer.common_comb": "Common Comb",
   "item.beemancer.noble_comb": "Noble Comb",
   "item.beemancer.diligent_comb": "Diligent Comb",
