--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -483,6 +483,8 @@
   "block.beemancer.honeyed_iron_block": "Honeyed Iron Block",
   "block.beemancer.royal_gold_block": "Royal Gold Block",
   "block.beemancer.nectar_diamond_block": "Nectar Diamond Block",
+  "block.beemancer.royal_crystal": "Royal Crystal",
+  "block.beemancer.nectar_crystal": "Nectar Crystal",
   "block.beemancer.alembic_heart": "Alembic Heart",
   "block.beemancer.infuser_heart": "Infuser Heart",
   "block.beemancer.centrifuge_heart": "Centrifuge Heart",
