--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -384,6 +384,14 @@
   "gui.beemancer.storage_controller.quantity": "Quantity",
   "gui.beemancer.storage_controller.honey_consumption": "Honey",
   "gui.beemancer.storage_controller.honey_efficiency": "Efficiency",
+  "gui.beemancer.storage_controller.delivery_bees": "Delivery Bees",
+  "block.beemancer.storage_hive": "Storage Hive",
+  "block.beemancer.storage_hive_tier2": "Storage Hive Tier 2",
+  "block.beemancer.storage_hive_tier3": "Storage Hive Tier 3",
+  "message.beemancer.storage_hive.linked": "Hive linked to controller",
+  "message.beemancer.storage_hive.unlinked": "Hive unlinked from controller",
+  "message.beemancer.storage_hive.max_reached": "Maximum hives reached (4)",
+  "message.beemancer.storage_hive.controller_only": "Hives can only be linked from controller edit mode",
   "block.beemancer.storage_relay": "Storage Relay",
   "message.beemancer.storage_relay.edit_mode_on": "Relay edit mode enabled - Click chests or Shift+click nodes to link",
   "message.beemancer.storage_relay.edit_mode_off": "Relay edit mode disabled",
